--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@material-ui/icons": "^4.11.2",
     "@material-ui/styles": "^4.11.3",
     "clsx": "^1.1.1",
+    "react-google-recaptcha": "^2.1.0",
     "styled-components": "^5.2.1"
   },
   "scripts": {
